display timestamps and encryption progress

--- a/css/secret.css
+++ b/css/secret.css
@@ -106,6 +106,17 @@ a:visited {
   display: flex;
 }
 
+.progress-bar {
+  position: absolute;
+  width: 100%;
+  bottom: -1px;
+  left: 0;
+  height: 1px;
+  background-color: var(--action-color);
+  transform-origin: 0;
+  transform: scaleX(0);
+}
+
 .encrypt-inputs {
   display: flex;
   flex: 1;
@@ -168,13 +179,18 @@ a:visited {
   align-items: flex-end;
 }
 
+.decrypt-inputs .lock-icon {
+  margin-top: 0;
+  margin-bottom: 9px;
+}
+
 .decrypt-inputs .pass-group {
   margin-bottom: 0;
   margin-right: 1rem;
 }
 
 .decrypt-inputs .submit-btn {
-  padding: 1.1rem 1.5rem;
+  padding: 1.05rem 1.5rem;
 }
 
 .btn {
@@ -234,6 +250,7 @@ a:visited {
 }
 
 .view-msg {
+  position: relative;
   color: var(--ui-color);
   padding-bottom: 1.5em;
   margin-bottom: 1.5em;
