--- a/css/secret.css
+++ b/css/secret.css
@@ -274,3 +274,24 @@ a:visited {
 .meta .share-expire {
   text-align: right;
 }
+
+.not-found {
+  margin-top: 3rem;
+  margin-right: 24rem;
+}
+
+.not-found h1 {
+  font-size: 2.4rem;
+  margin-bottom: 1.2rem;
+  color: #fff;
+}
+
+.not-found p {
+  font-size: 1.8rem;
+  line-height: 1.4;
+  margin-bottom: 1rem;
+}
+
+.not-found a {
+  font-size: 1.6rem;
+}
