--- a/css/secret.css
+++ b/css/secret.css
@@ -41,7 +41,7 @@ img {
 
 body {
   color: var(--ui-color);
-  background-color: #342e35;
+  background: #262534;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -96,6 +96,7 @@ a:visited {
 
 #msg-input:focus {
   outline: none;
+  caret-color: var(--action-color);
 }
 
 #msg-input:disabled {
@@ -148,12 +149,14 @@ a:visited {
   border: none;
   border-radius: 3px;
   background-color: #5a545b;
+  color: #ccc;
   font-size: 1.6rem;
 }
 
 #pass-input:focus {
   outline: none;
   background-color: #fff;
+  color: #000;
   box-shadow: 0 0 0 2px var(--action-color);
 }
 
@@ -294,4 +297,19 @@ a:visited {
 
 .not-found a {
   font-size: 1.6rem;
+}
+
+.footer {
+  padding: 16rem 0 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.footer p {
+  margin: 0;
+  color: #828282;
+  font-size: 1.6rem;
+  line-height: 2;
 }
