--- a/css/secret.css
+++ b/css/secret.css
@@ -1,5 +1,6 @@
 :root {
   --ui-color: #cecece;
+  --ui-disabled: #4e4a56;
   --action-color: #23af85;
 }
 
@@ -148,7 +149,7 @@ a:visited {
   padding: 1rem;
   border: none;
   border-radius: 3px;
-  background-color: #5a545b;
+  background-color: var(--ui-disabled);
   color: #ccc;
   font-size: 1.6rem;
 }
@@ -213,8 +214,8 @@ a:visited {
 }
 
 .btn:disabled {
-  background-color: #5a545b;
-  color: #342e35;
+  background-color: var(--ui-disabled);
+  color: #262534;
 }
 
 .share-overlay {
