add wrong passphrase error

--- a/css/secret.css
+++ b/css/secret.css
@@ -2,6 +2,7 @@
   --ui-color: #cecece;
   --ui-disabled: #4e4a56;
   --action-color: #23af85;
+  --error-color: #cee242;
 }
 
 html {
@@ -161,6 +162,10 @@ a:visited {
   box-shadow: 0 0 0 2px var(--action-color);
 }
 
+#pass-input.error {
+  box-shadow: 0 0 0 2px var(--error-color);
+}
+
 .select-group {
   flex: 1;
 }
@@ -195,6 +200,13 @@ a:visited {
 
 .decrypt-inputs .submit-btn {
   padding: 1.05rem 1.5rem;
+}
+
+.decrypt-error {
+  padding: 1rem 2.8rem;
+  font-size: 1.8rem;
+  font-style: italic;
+  color: var(--error-color);
 }
 
 .btn {
